--- a/client/resources/style/index.scss
+++ b/client/resources/style/index.scss
@@ -4,6 +4,22 @@ $button-width: 200px;
 
 $collapsed-width: 6%;
 
+.help-button{
+  float: right;
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.5s;
+  padding: 5px 10px;
+  width: 60px;
+  margin-top: -15px;
+}
+
 #execCode,
 #checkCode{
   overflow: hidden;
@@ -156,6 +172,12 @@ $collapsed-width: 6%;
   .code-iterator,
   .code-input{
     width: $collapsed-width;
+  }
+  .code-input .key-helpers .key-helper{ 
+    transition: 0.7s;
+    width: 0px;
+    padding: 0px;
+    overflow: hidden;    
   }
   .code-preety{
     width: 100% - ($collapsed-width * 2);
