--- a/client/style/template/_input.scss
+++ b/client/style/template/_input.scss
@@ -1,147 +1,11 @@
-$button-padding-v: 10px;
-$button-padding-h: 32px;
-$button-width: 200px;
-$button-color: #4CAF50;
-
 .input-container{
-  #process{
-    overflow: hidden;
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    background-color: transparent;
-    border: 0;
-    border-right: 2px solid $button-color;
-    color: $button-color;
-    //color: white;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    cursor: pointer;
-    transition: all 0.5s;
-    padding: ($button-padding-v - 5px) ($button-padding-h - 5px) $button-padding-v $button-padding-h ;
-    width: $button-width;
-    &:focus{
-      outline: none;
-    }
-    > .button-text {
-      font-weight: bold;
-      font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
-      cursor: pointer;
-      display: inline-block;
-      position: relative;
-      transition: 0.5s;
-      z-index: 3;
-    }
-    > .button-icon {
-      font-size: 20px;
-      position: relative;
-      opacity: 0;
-      transition: 0.5s;
-      z-index: 3;
-    }
-    &:hover{
-      > .button-text {
-        padding-right: 5px;
-      }
-      > .button-icon {
-        opacity: 1;
-        right: 0;
-      }
-    }
-    &:before {
-      content: '';
-      position: absolute;
-      width: 200%;
-      height: 30%;
-      left: -3px;
-      bottom: 0px;     
-      border-bottom: 2px solid $button-color;
-      border-left: 5px solid $button-color;
-      transform: skewX(65deg);
-      transform-origin: right top;
-      z-index: 2;
-    }
-    &:after {
-      content: '';
-      position: absolute;
-      box-sizing: border-box;
-      
-      width: 100%;
-      height: 70%;
-      right: 0px;
-      top: 0px;
-      border-left: 2px solid $button-color;
-      border-top: 2px solid $button-color;
-      transform-origin: right bottom;
-      z-index: 1;
-    }
-    &:after,
-    &:before{
-      transition: all 0.2s;
-    }
-  }
-  .key-helpers{
-    position: absolute;  
-    bottom: 10px;
-    right: 10px; 
-    .key-helper-icon,
-    .key-helper{
-      border: none;
-      color: #00897B;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      cursor: pointer;
-      transition: all 0.5s;
-      position: relative;  
-      bottom: 10px;
-      right: 10px; 
-      width: 50px;
-      border: 2px solid #00897B;
-      background-color: transparent;
-    }
-    .key-helper-icon{
-      font-size: 12px;
-      padding: 6px 5px 2px 5px;
-      .fa{
-        position: relative;
-        top: -2px;
-      }
-    }
-    .key-helper{
-      font-weight: bold;
-      font-size: 16px;
-      padding: 5px 5px;
-    }
-  }
-  #input{
-    font-family: monospace;
-    white-space: pre;
-    word-wrap: normal;
-    overflow-x: auto;
-    overflow-y: auto;
-    resize: none;
-  }
+  padding-right: 60px;
 }
 
-@media screen and (max-width: 720px) and (min-width: 641px){
-  //TODO revisar esto
-  .input-container #process{
-    font-size: 10px;
-    line-height: 12px;
-    //width: $button-width * 0.6;
-    padding: $button-padding-v*0.7 $button-padding-h*0.1 $button-padding-v*0.9 $button-padding-h*0.1;
-  } 
-}
-
-/* #### Mobile Phones Landscape #### */
-@media screen and (max-width: 640px){
-  //TODO revisar esto
-  .input-container #process{
-    font-size: 6px;
-    width: $button-width * 0.3;
-    padding: $button-padding-v*0.3 $button-padding-h*0.3;
+@media only screen and (min-width: 640px) and (max-width: 960px){
+  .output-mode{
+    .input-container{
+      padding-right: 4px;
+    }
   }
 }
