--- a/client/markup/template/button.html
+++ b/client/markup/template/button.html
@@ -1,3 +1,3 @@
-<button type="button" class="key-helper fa fa-{{klass}}" title="ctrl+{{key}}" onclick="writeChar('{{write}}')">
+<button type="button" class="menu-button fa fa-{{klass}}" title="ctrl+{{key}}" onclick="writeInput('{{write}}')">
   <span>{{symbol}}</span>
 </button>
