--- a/client/style/borrar/index.scss
+++ b/client/style/borrar/index.scss
@@ -46,7 +46,7 @@ $collapsed-width: 6%;
     position: relative;
     transition: 0.5s;
     &:after {
-      content: '»';
+      content: '>>';
       position: absolute;
       opacity: 0;
       top: 0;
@@ -67,9 +67,9 @@ $collapsed-width: 6%;
 
 
 .code-input .key-helpers{
-  position: absolute;  
+  position: absolute;
   bottom: 10px;
-  right: 10px; 
+  right: 10px;
 }
 
 .code-input .key-helpers .key-helper{
@@ -84,9 +84,9 @@ $collapsed-width: 6%;
 }
 
 .code-input .key-helpers .key-helper{
-  position: relative;  
+  position: relative;
   bottom: 10px;
-  right: 10px; 
+  right: 10px;
   background-color: #00897B;
   padding: 5px 5px;
 }
@@ -172,11 +172,11 @@ $collapsed-width: 6%;
   .code-input{
     width: $collapsed-width;
   }
-  .code-input .key-helpers .key-helper{ 
+  .code-input .key-helpers .key-helper{
     transition: 0.7s;
     width: 0px;
     padding: 0px;
-    overflow: hidden;    
+    overflow: hidden;
   }
   .code-preety{
     width: 100% - ($collapsed-width * 2);
