iteracion elemento unico

--- a/client/markup/template/input.html
+++ b/client/markup/template/input.html
@@ -1,4 +1,9 @@
 <div class="input-container">
-  <textarea id="input" onkeyup="inputChange()" onfocus="inputMode()" spellcheck="false"></textarea>
+  <textarea id="input"
+    onkeyup="inputChange()"
+    onfocus="inputMode()"
+    onclick="inputMode()"
+    spellcheck="false"
+  ></textarea>
   <!--(bake menu.html)-->
 </div>
