--- a/client/style/template/_viewer.scss
+++ b/client/style/template/_viewer.scss
@@ -1,12 +1,12 @@
-.root{ 
-  padding: 0px; 
-  margin: 0px; 
+.root{
+  padding: 0px;
+  margin: 0px;
   size: 16px;
   line-height: 16px;
-  display: inline-flex;   
+  display: inline-flex;
   .lines{
-    float: left; 
-    display: inline-block;   
+    float: left;
+    display: inline-block;
   }
   .first-level{
     float: left;
@@ -17,7 +17,7 @@
     display: inline-block;
     .index{
       min-width: 10px;
-      text-align: right;    
+      text-align: right;
       color: #0AA;
       margin-right: 5px;
       display: block;
@@ -32,21 +32,22 @@
     }
     &.index-container-2{
       .index{
-        min-width: 15px;      
+        min-width: 15px;
       }
     }
   }
   .premise,
   .supposed,
   .assertion,
-  .iteration-close{ 
+  .iteration-close{
     margin-top: 8px;
     >*{
       float: left;
     }
   }
   .state-error,
-  .state-not-ok{
+  .state-not-ok,
+  .state-error-left{
     float: left;
     width: 13px;
     height: 13px;
@@ -54,7 +55,12 @@
     margin-top: 1px;
     margin-left: 5px;
   }
-  .assertion{ 
+  .state-error-left{
+    margin-top: 15px;
+    margin-left: 0px;
+    clear:left;
+  }
+  .assertion{
     float: left;
     clear: left;
   }
@@ -88,7 +94,7 @@
     padding-bottom: 10px;
     padding-top: 5px;
     margin-top: 10px;
-    margin-bottom: 5px;   
+    margin-bottom: 5px;
     float: left;
     clear: left;
   }
@@ -107,7 +113,7 @@
       margin:0;
     }
   }
-  
+
   .rule{
     display: inline;
     margin-left: 5px;
@@ -128,10 +134,10 @@
     color: #066;
   }
   .rule-type{
-    color: #066;    
+    color: #066;
   }
   .rule-connector{
-    color: #080;    
+    color: #080;
   }
   .parenthesis{
     color: #066;
