--- a/client/markup/template/input.html
+++ b/client/markup/template/input.html
@@ -1,6 +1,6 @@
 <div class="input-container">
   <textarea id="input"
-    onkeyup="inputChange()"
+    onkeydown="inputChange()"
     onfocus="inputMode()"
     onclick="inputMode()"
     spellcheck="false"
