--- a/client/markup/template/header.html
+++ b/client/markup/template/header.html
@@ -1,7 +1,9 @@
-<div class="inner">
-  <a href="index.html"><h1>Derivaciones.GitHub.io</h1></a>
-  <a href="https://github.com/derivaciones" class="button">
-    <small class="follow">Follow me on</small>
-    <span class="github">GitHub</span><span class="fa fa-arrow-right"></span>
-  </a>
+<div class="">
+  <div class="inner">
+    <a href="index.html"><h1>Derivaciones.GitHub.io</h1></a>
+    <a href="https://github.com/derivaciones" class="button">
+      <small class="follow">Follow me on</small>
+      <span class="github">GitHub</span><span class="fa fa-arrow-right"></span>
+    </a>
+  </div>
 </div>
