--- a/client/style/page/validate.scss
+++ b/client/style/page/validate.scss
@@ -1,3 +1,5 @@
+@import '../layout/full';
+@import '../template/viewer';
 
 .validate-preety{
   transition: all 0.5s;
@@ -5,7 +7,7 @@
   padding-top: 5px;
   box-sizing: border-box;
   float: left;
-  white-space: nowrap;
+  //white-space: nowrap;
   padding-left: 5px;
   padding-right: 2px;
   padding-left: 2px;
@@ -18,10 +20,10 @@
 #validatePreety{
   box-sizing: border-box;
   width: 100%;
-  height: 85vh;
+  height: 75vh;
   margin: 0px;
   padding: 5px;
-  white-space: pre;
+  //white-space: pre;
   word-wrap: normal;
   overflow-x: auto;
   background-color: #FFFFFF;
@@ -31,20 +33,25 @@
   padding: 5px;
   box-sizing: border-box;
   padding-right: 0px;
-  .root{
-    min-width: 300px;
-    float: left;
-    margin-bottom: 15px;
-    margin-right: 15px;
+  .valid-container{
+    pre{
+      width: 30%;
+      float: left;
+      padding: 0;
+      border: 0;
+      padding:0;
+      clear: left;
+    }
+    .root{
+      width: 70%;
+      float: left;
+      margin-bottom: 15px;
+      margin-right: 0;
+      clear: none;
+    }
   }
 }
 
 .pull-left{
  clear: left;
 }
-
-
-
-
-
-
