--- a/client/markup/template/header.html
+++ b/client/markup/template/header.html
@@ -1,9 +1,20 @@
-<div class="">
-  <div class="inner">
-    <a href="index.html"><h1>Derivaciones.GitHub.io</h1></a>
-    <a href="https://github.com/derivaciones" class="button">
-      <small class="follow">Follow me on</small>
-      <span class="github">GitHub</span><span class="fa fa-arrow-right"></span>
-    </a>
-  </div>
+<div class="header-inner">
+  <a href="index.html" class="index-link">
+    <h1>Derivaciones.GitHub.io</h1>
+  </a>
+  <a href="https://github.com/derivaciones" class="github-link">
+    <div class="github-left">
+      <img src="asset/github-icon.png" class="github-logo">
+    </div>
+    <div class="github-right">
+      <span class="follow-me">Follow me on</span>
+      <span class="github">GitHub</span>
+      <span class="github-arrow">
+        <i class="fa fa-arrow-right"></i>
+      </span>
+    </div>
+  </a>
 </div>
+<a class="no-href toggle-menu">
+  <i class="fa fa-bars"></i>
+</a>
