--- a/client/style/general.scss
+++ b/client/style/general.scss
@@ -1,111 +1,305 @@
-@mixin transform($transforms) {
-     -moz-transform: $transforms;
-       -o-transform: $transforms;
-      -ms-transform: $transforms;
-  -webkit-transform: $transforms;
-          transform: $transforms;
+@import 'variables';
+@import 'mixins';
+
+.no-href{
+  cursor: pointer;
 }
 
-@mixin rotate ($deg) {
-  @include transform(rotate(#{$deg}deg));
-}
-
-@keyframes move {
-  0% {
-    padding-left: 0;
-  }
-  100% {
-    padding-left: 15px;
-  }
-}
-
-body {
-  margin: 0;
-  padding: 0;
-}
-
-header {
-  position: absolute;
-  z-index: 2;
-  padding-top: 15px;
-  padding-bottom: 10px;
-  background-size: 70px;
-  background-position: 0 -30px;
-  h1 {
-    font-size: 3.5em;
-    line-height: 1.4em;
-  }
-}
-
-#main-content{
+body{
+  margin: 0px;
   width: 100%;
+  height: auto;
+  overflow: hidden;
 }
 
-.inner{
-  width: 80%;
-  margin: 0 10%;
-}
+header{
+  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  background: #2e7bcf url(../asset/header-bg.jpg) 0 0 repeat-x;
+  border-bottom: solid 1px #275da1;
+  height: $header-height;
+  width: 100%;
+  transition: height .5s, padding .5s;
+  a{
+    text-decoration: none;
+  }
+  box-sizing: border-box;
+  position: absolute;
+  padding: 0 5px;
+  z-index: 1;
+  padding: 0 7px;
+  .toggle-menu{
+    color: #DDD;
+    position: absolute;
+    bottom: 1px;
+    left: 7px;
+    &:hover{
+      color: #FFF;
+    }
+  }
+  .header-inner{
+    position: relative;
+    width: 100%;
+    padding: 0px;
 
-code.bold{
-  font-weight: bold;
-}
+    .index-link{
+      h1{
+        color: #fff;
+        margin: 0;
+        margin-left: 0;
+        font-weight: normal;
 
-@media only screen and (min-width: 768px) {
-  header{
-    a.button {
-      transition: all 0.5s;
-      margin-right: -12px;
-      padding-left: 80px;
-      .fa{
-        @include rotate(-45);
-        margin-left: 5px;
-        transition: opacity .5s ease-out;
-        opacity: 0;
-      }
-      &:hover{
-        padding-left: 68px;
-        margin-right: 0;
-        .fa{
-          opacity: 1;
-          animation-name: move;
-          animation-duration: 1s;
-          animation-iteration-count: infinite;
-          animation-timing-function: linear;
+        font-size: 1.2rem;
+        text-align: center;
+        transition: all 0.5s;
+        @include xs{
+          font-size: 2.0rem;
         }
-
+        @include sm{
+          margin-right: 100px;
+          line-height: $header-height;
+          font-size: 2.8rem;
+        }
+        @include md{
+          font-size: 3.2rem;
+        }
+        @include lg{
+          font-size: 3.8rem;
+        }
       }
     }
-  }
-}
 
-@media only screen and (min-width: 768px) and (max-width: 959px) {
-  header h1 {
-    font-size: 3em;
-    line-height: 1.6em;
-  }
-  .inner{
-    width: 90%;
-    margin: 0 5%;
-  }
-}
-
-@media only screen and (max-width: 767px) {
-  header{
-    h1{
-      font-size: 2em;
-      line-height: 1em;
-    }
-    a.button {
-      padding-left: 10px;
-      margin-top: 5px;
-      background-color: #EEEEFF;
+    .github-link{
+      border: 1px solid white;
+      border-radius: 10px;
+      position: absolute;
+      float: right;
+      top: 4px;
+      right: 0;
+      padding: 0px;
+      font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+      color: #fff;
+      .github-left{
+        float:left;
+        width: 16px;
+        padding: 7px 0px 3px 6px;
+        .github-logo{
+          width: 16px;
+        }
+      }
+      .github-right{
+        transition: margin .5s, width .5s;
+        float: left;
+        width: 60px;
+        margin: 0;
+        margin-top: 0;
+        margin-left: 10px;
+        .follow-me{
+          font-size: 8px;
+          line-height: normal;
+          margin-top: 5px;
+          float:left;
+        }
+        .github{
+          font-size: 12px;
+          line-height: normal;
+          margin-top: 0px;
+          float:left;
+          clear: left;
+        }
+        .github-arrow{
+          opacity: 0;
+          font-size: 8px;
+          margin-left: 5px;
+          line-height: 19px;
+          float:left;
+          i.fa{
+            transform: rotate(-45deg);
+          }
+        }
+      }
       &:hover{
-        background-color: #FFFFFF;
+        .github-right{
+          width: 65px;
+          margin-left: 5px;
+          .github-arrow{
+            opacity: 1;
+            .fa{
+              animation-name: move;
+              animation-duration: 1s;
+              animation-iteration-count: infinite;
+              animation-timing-function: linear;
+            }
+          }
+        }
       }
-      .fa{
-        display:none;
+    }
+    @include sm{
+      .github-link{
+        border: 2px solid white;
+        border-radius: 15px;
+        top: 10px;
+        .github-left{
+          width: 32px;
+          padding: 12px 0px 5px 10px;
+          .github-logo{
+            width: 32px;
+          }
+        }
+        .github-right{
+          margin-left: 20px;
+          width: 105px;
+          .follow-me{
+            font-size: 11px;
+            line-height: 23px;
+          }
+          .github{
+            font-size: 23px;
+            line-height: 23px;
+          }
+          .github-arrow{
+            opacity: 0;
+            font-size: 16px;
+
+          }
+        }
+        &:hover{
+          .github-right{
+            width: 115px;
+            margin-left: 10px;
+          }
+        }
+      }
+
+    }
+  }
+}
+
+@include sm{
+
+  header{
+    height: $header-height-init;
+    .header-inner{
+      .index-link{
+        h1{
+          font-size: 2.4rem;
+          text-align: left;
+          line-height: normal;
+        }
       }
     }
   }
-
+  body.full{
+    header{
+      height: $header-height;
+      .header-inner{
+        .index-link{
+          h1{
+            font-size: 1.2rem;
+            text-align: left;
+            line-height: normal;
+          }
+        }
+      }
+    }
+  }
 }
+
+
+
+
+
+
+
+//
+
+//
+// body {
+//   margin: 0;
+//   padding: 0;
+// }
+//
+// header {
+//   position: absolute;
+//   z-index: 2;
+//   padding-top: 15px;
+//   padding-bottom: 10px;
+//   background-size: 70px;
+//   background-position: 0 -30px;
+//   h1 {
+//     font-size: 3.5em;
+//     line-height: 1.4em;
+//   }
+// }
+//
+// #main-content{
+//   width: 100%;
+// }
+//
+// .inner{
+//   width: 80%;
+//   margin: 0 10%;
+// }
+//
+// code.bold{
+//   font-weight: bold;
+// }
+//
+// @media only screen and (min-width: 768px) {
+//   header{
+//     a.button {
+//       transition: all 0.5s;
+//       margin-right: -12px;
+//       padding-left: 80px;
+//       .fa{
+//         @include rotate(-45);
+//         margin-left: 5px;
+//         transition: opacity .5s ease-out;
+//         opacity: 0;
+//       }
+//       &:hover{
+//         padding-left: 68px;
+//         margin-right: 0;
+//         .fa{
+//           opacity: 1;
+//           animation-name: move;
+//           animation-duration: 1s;
+//           animation-iteration-count: infinite;
+//           animation-timing-function: linear;
+//         }
+//
+//       }
+//     }
+//   }
+// }
+//
+// @media only screen and (min-width: 768px) and (max-width: 959px) {
+//   header h1 {
+//     font-size: 3em;
+//     line-height: 1.6em;
+//   }
+//   .inner{
+//     width: 90%;
+//     margin: 0 5%;
+//   }
+// }
+//
+// @media only screen and (max-width: 767px) {
+//   header{
+//     h1{
+//       font-size: 2em;
+//       line-height: 1em;
+//     }
+//     a.button {
+//       padding-left: 10px;
+//       margin-top: 5px;
+//       background-color: #EEEEFF;
+//       &:hover{
+//         background-color: #FFFFFF;
+//       }
+//       .fa{
+//         display:none;
+//       }
+//     }
+//   }
+//
+// }
