--- a/client/style/template/_input.scss
+++ b/client/style/template/_input.scss
@@ -2,6 +2,10 @@
   padding-right: 60px;
 }
 
+textarea{
+  font-family: monospace;
+}
+
 @media only screen and (min-width: 640px) and (max-width: 960px){
   .output-mode{
     .input-container{
