--- a/client/style/template/_menu.scss
+++ b/client/style/template/_menu.scss
@@ -1,11 +1,8 @@
-.menu-container{
-  position: absolute;
-  top: 0;
-  right: 4px;
+body main .menu-container{
+  width: 100%;
   .menu{
-    position: absolute;  
-    top: 0;
-    right: 0; 
+    top: 2px;
+    left: 2px;
     .menu-button-text,
     .menu-button-icon,
     .menu-button{
@@ -16,13 +13,17 @@
       display: inline-block;
       cursor: pointer;
       transition: all 0.5s;
-      position: relative;  
+      position: relative;
       width: 50px;
+      height: 30px;
       border: 2px solid #00897B;
       background-color: transparent;
-      margin-bottom: 4px;
-      float: right;
-      clear: right;
+      margin: 2px;
+      float: left;
+      //clear: right;
+      > *{
+        vertical-align: middle;
+      }
     }
     .menu-button-icon{
       font-size: 12px;
@@ -41,7 +42,40 @@
     .menu-button{
       font-weight: bold;
       font-size: 16px;
-      padding: 7px 5px;
+    }
+  }
+}
+body.full{
+  .menu-container{
+    top: $header-height;
+  }
+}
+
+@include sm{
+  body main .menu-container{
+    position: absolute;
+    top: $header-height-init;
+    left: 0;
+    z-index: 1;
+    .menu{
+      position: absolute;
+      top: 2px;
+      left: 2px;
+    }
+  }
+}
+
+
+@include full-height-sm{
+  body.full,
+  body {
+    main .menu-container{
+      top: auto;
+      bottom: 0;
+      .menu{
+        top: auto;
+        bottom: 2px;
+      }
     }
   }
 }
@@ -49,16 +83,16 @@
 @media only screen and (min-width: 640px) and (max-width: 960px){
   .output-mode{
     .menu-container{
-      right: 0;
+      // right: 0;
       .menu{
         .menu-button-text,
         .menu-button-icon,
         .menu-button{
           //font-size: 1px;
-          width: 0px;
-          padding-left: 0;
-          padding-right: 0;
-          border: none;
+          // width: 0px;
+          // padding-left: 0;
+          // padding-right: 0;
+          // border: none;
          }
       }
     }
