--- a/client/markup/template/menu.html
+++ b/client/markup/template/menu.html
@@ -7,6 +7,7 @@
     <!--(bake ../template/button.html symbol="&or;"   write="V" key="d")-->
     <!--(bake ../template/button-icon.html klass="arrow-right" write="→" key="e")-->
     <!--(bake ../template/button.html symbol="&perp;" write="⊥" key="r")-->
+    <!--(bake ../template/button.html symbol="&not;"  write="¬" key="g")-->
     <!--(bake ../template/button-text.html symbol="&lt;&lt;" write="<<")-->
     <!--(bake ../template/button-text.html symbol="p" write="p")-->
     <!--(bake ../template/button-text.html symbol="q" write="q")-->
