--- a/client/style/variables.scss
+++ b/client/style/variables.scss
@@ -5,8 +5,9 @@ $lg-breake:  1200px;
 $xl-breake:  1440px;
 $xll-breake: 1600px;
 
+$header-height-xxs: 27px;
 $header-height: 50px;
-$header-height-init: 88px;
+$header-height-init: 80px;
 
 $ide-height-breake: 500px;
 
@@ -16,3 +17,4 @@ $collapsed-width: 6%;
 
 
 $input-min-height: 300px;
+$output-min-height: 100px;
