--- a/client/style/general.scss
+++ b/client/style/general.scss
@@ -9,14 +9,14 @@ body{
   margin: 0px;
   width: 100%;
   height: auto;
-  overflow: hidden;
+  //overflow: hidden;
 }
 
 header{
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
   background: #2e7bcf url(../asset/header-bg.jpg) 0 0 repeat-x;
   border-bottom: solid 1px #275da1;
-  height: $header-height;
+  height: $header-height-xxs;
   width: 100%;
   transition: height .5s, padding .5s;
   a{
@@ -24,9 +24,8 @@ header{
   }
   box-sizing: border-box;
   position: absolute;
-  padding: 0 5px;
   z-index: 1;
-  padding: 0 7px;
+  padding: 0;
   .toggle-menu{
     color: #DDD;
     position: absolute;
@@ -45,7 +44,7 @@ header{
       h1{
         color: #fff;
         margin: 0;
-        margin-left: 0;
+        margin-left: 5px;
         font-weight: normal;
 
         font-size: 1.2rem;
@@ -70,37 +69,40 @@ header{
 
     .github-link{
       border: 1px solid white;
-      border-radius: 10px;
+      border-radius: 5px;
       position: absolute;
       float: right;
-      top: 4px;
-      right: 0;
+      top: 2px;
+      right: 2px;
       padding: 0px;
       font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
       color: #fff;
       .github-left{
+        transition: all .5s;
         float:left;
-        width: 16px;
-        padding: 7px 0px 3px 6px;
+        width: 12px;
+        padding: 4px 0px 3px 4px;
         .github-logo{
-          width: 16px;
+          transition: all .5s;
+          float:left;
+          width: 12px;
         }
       }
       .github-right{
         transition: margin .5s, width .5s;
         float: left;
-        width: 60px;
+        width: 40px;
         margin: 0;
         margin-top: 0;
-        margin-left: 10px;
+        margin-left: 8px;
         .follow-me{
-          font-size: 8px;
+          font-size: 5px;
           line-height: normal;
-          margin-top: 5px;
+          margin-top: 2px;
           float:left;
         }
         .github{
-          font-size: 12px;
+          font-size: 8px;
           line-height: normal;
           margin-top: 0px;
           float:left;
@@ -108,9 +110,9 @@ header{
         }
         .github-arrow{
           opacity: 0;
-          font-size: 8px;
-          margin-left: 5px;
-          line-height: 19px;
+          font-size: 5px;
+          margin-left: 2px;
+          line-height: 12px;
           float:left;
           i.fa{
             transform: rotate(-45deg);
@@ -118,9 +120,16 @@ header{
         }
       }
       &:hover{
+        .github-left{
+          width: 10px;
+          padding: 5px 0px 4px 4px;
+          .github-logo{
+            width: 10px;
+          }
+        }
         .github-right{
-          width: 65px;
-          margin-left: 5px;
+          width: 46px;
+          margin-left: 4px;
           .github-arrow{
             opacity: 1;
             .fa{
@@ -133,7 +142,79 @@ header{
         }
       }
     }
-    @include sm{
+
+  }
+}
+
+@include xs{
+  header{
+    .header-inner{
+      .github-link{
+        border: 1.3px solid white;
+        border-radius: 10px;
+        position: absolute;
+        float: right;
+        top: 6px;
+        right: 4px;
+        padding: 0px;
+        font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+        color: #fff;
+        .github-left{
+          float:left;
+          width: 16px;
+          height: auto;
+          padding: 8px 0px 3px 6px;
+          .github-logo{
+            width: 16px;
+            height: auto;
+          }
+        }
+        .github-right{
+          transition: margin .5s, width .5s;
+          float: left;
+          width: 60px;
+          margin: 0;
+          margin-top: 0;
+          margin-left: 10px;
+          .follow-me{
+            font-size: 8px;
+            line-height: normal;
+            margin-top: 5px;
+          }
+          .github{
+            font-size: 12px;
+            line-height: normal;
+            margin-top: 0px;
+          }
+          .github-arrow{
+            font-size: 8px;
+            margin-left: 5px;
+            line-height: 19px;
+          }
+        }
+        &:hover{
+          .github-left{
+            padding: 8px 0px 3px 6px;
+            width: 16px;
+            height: auto;
+            .github-logo{
+              width: 16px;
+              height: auto;
+            }
+          }
+          .github-right{
+            width: 65px;
+            margin-left: 5px;
+          }
+
+        }
+      }
+    }
+  }
+}
+@include sm{
+  header{
+    .header-inner{
       .github-link{
         border: 2px solid white;
         border-radius: 15px;
@@ -169,12 +250,86 @@ header{
           }
         }
       }
-
     }
   }
 }
 
 @include sm{
+  body.full{
+    header{
+      .header-inner{
+        .github-link{
+          border: 1.3px solid white;
+          border-radius: 10px;
+          position: absolute;
+          float: right;
+          top: 6px;
+          right: 4px;
+          padding: 0px;
+          .github-left{
+            float:left;
+            width: 16px;
+            height: auto;
+            padding: 8px 0px 3px 6px;
+            .github-logo{
+              width: 16px;
+              height: auto;
+            }
+          }
+          .github-right{
+            width: 60px;
+            margin: 0;
+            margin-top: 0;
+            margin-left: 10px;
+            .follow-me{
+              font-size: 8px;
+              line-height: normal;
+              margin-top: 5px;
+            }
+            .github{
+              font-size: 12px;
+              line-height: normal;
+              margin-top: 0px;
+            }
+            .github-arrow{
+              font-size: 8px;
+              margin-left: 5px;
+              line-height: 19px;
+            }
+          }
+          &:hover{
+            .github-left{
+              padding: 8px 0px 3px 6px;
+              width: 16px;
+              height: auto;
+              .github-logo{
+                width: 16px;
+                height: auto;
+              }
+            }
+            .github-right{
+              width: 65px;
+              margin-left: 5px;
+            }
+
+          }
+        }
+      }
+    }
+  }
+}
+
+main{
+  background-color: inherit;
+  top: 0;
+  position: absolute;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0px;
+  padding-top: $header-height-xxs;
+}
+
+@include xs{
 
   header{
     height: $header-height-init;
@@ -188,7 +343,13 @@ header{
       }
     }
   }
+  main{
+    padding-top: $header-height-init;
+  }
   body.full{
+    main{
+      padding-top: $header-height;
+    }
     header{
       height: $header-height;
       .header-inner{
@@ -197,6 +358,7 @@ header{
             font-size: 1.2rem;
             text-align: left;
             line-height: normal;
+            margin-left: 7px;
           }
         }
       }
@@ -207,99 +369,4 @@ header{
 
 
 
-
-
-
 //
-
-//
-// body {
-//   margin: 0;
-//   padding: 0;
-// }
-//
-// header {
-//   position: absolute;
-//   z-index: 2;
-//   padding-top: 15px;
-//   padding-bottom: 10px;
-//   background-size: 70px;
-//   background-position: 0 -30px;
-//   h1 {
-//     font-size: 3.5em;
-//     line-height: 1.4em;
-//   }
-// }
-//
-// #main-content{
-//   width: 100%;
-// }
-//
-// .inner{
-//   width: 80%;
-//   margin: 0 10%;
-// }
-//
-// code.bold{
-//   font-weight: bold;
-// }
-//
-// @media only screen and (min-width: 768px) {
-//   header{
-//     a.button {
-//       transition: all 0.5s;
-//       margin-right: -12px;
-//       padding-left: 80px;
-//       .fa{
-//         @include rotate(-45);
-//         margin-left: 5px;
-//         transition: opacity .5s ease-out;
-//         opacity: 0;
-//       }
-//       &:hover{
-//         padding-left: 68px;
-//         margin-right: 0;
-//         .fa{
-//           opacity: 1;
-//           animation-name: move;
-//           animation-duration: 1s;
-//           animation-iteration-count: infinite;
-//           animation-timing-function: linear;
-//         }
-//
-//       }
-//     }
-//   }
-// }
-//
-// @media only screen and (min-width: 768px) and (max-width: 959px) {
-//   header h1 {
-//     font-size: 3em;
-//     line-height: 1.6em;
-//   }
-//   .inner{
-//     width: 90%;
-//     margin: 0 5%;
-//   }
-// }
-//
-// @media only screen and (max-width: 767px) {
-//   header{
-//     h1{
-//       font-size: 2em;
-//       line-height: 1em;
-//     }
-//     a.button {
-//       padding-left: 10px;
-//       margin-top: 5px;
-//       background-color: #EEEEFF;
-//       &:hover{
-//         background-color: #FFFFFF;
-//       }
-//       .fa{
-//         display:none;
-//       }
-//     }
-//   }
-//
-// }
