--- a/client/style/template/_input.scss
+++ b/client/style/template/_input.scss
@@ -1,15 +1,13 @@
 .input-container{
-  padding-right: 60px;
+  box-sizing: border-box;
+  //padding: 1px;
+  //margin: -1px;
+  //background: red;
 }
 
 textarea{
   font-family: monospace;
-}
-
-@media only screen and (min-width: 640px) and (max-width: 960px){
-  .output-mode{
-    .input-container{
-      padding-right: 4px;
-    }
-  }
+  box-sizing: border-box;
+  padding: 0;
+  //border: 0;
 }
