--- a/client/style/variables.scss
+++ b/client/style/variables.scss
@@ -11,10 +11,9 @@ $header-height-init: 80px;
 
 $ide-height-breake: 500px;
 
-$menu-height: 20px;
-
 $collapsed-width: 6%;
 
+$sidebar-width: 150px;
 
 $input-min-height: 300px;
 $output-min-height: 100px;
