--- a/client/markup/template/head.html
+++ b/client/markup/template/head.html
@@ -14,3 +14,5 @@
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script src="script/main.js" type="text/javascript"></script>
+    <script src="script/sidebar.js" type="text/javascript"></script>
