--- a/client/markup/template/header.html
+++ b/client/markup/template/header.html
@@ -15,6 +15,6 @@
     </div>
   </a>
 </div>
-<a class="no-href toggle-menu">
+<a class="no-href toggle-menu" onclick="toggleSidebar()">
   <i class="fa fa-bars"></i>
 </a>
