--- a/client/markup/template/first.html
+++ b/client/markup/template/first.html
@@ -1,18 +1,26 @@
-<div id="content-wrapper">
+<div class="content-wrapper">
   <div class="inner clearfix">
-    <section id="main-content">
+    <section>
       <h3>
-        <a id="derivaciones-first" class="anchor" href="#derivaciones-first" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
         Bienvenido
       </h3>
-      <h5>
-        Aparemente es la primera vez que nos visitas.
-      </h5>
       <p>
-        Puedes consultar la página de <a href="help.html">ayuda</a> del validador.
+        Aparemente es la primera vez que nos visitas.
+      </p>
+      <p class="text-justify">
+        El validador de derivaciones proporciona un entorno para la práctica
+        efectiva y el reconocimiento preciso de los sistemas de deducción
+        natural, permitiendo demostrar la validez de razonamientos,
+        la equivalencia de fórmulas a partir de derivaciones mutuas y la
+        inconsistencia de conjuntos de proposiciones. A partir  del validador
+        de derivaciones el estudiante puede controlar la aplicación correcta
+        de las reglas introducción y eliminación de la lógica proposicional
       </p>
       <p>
-        O ir directamente a la <a href="index.html">aplicación</a>.
+        Puedes consultar la página de <a href="help.html">documentación</a> del validador.
+      </p>
+      <p>
+        O acceder a la <a href="index.html">aplicación</a>.
       </p>
     </section>
   </div>
