--- a/client/markup/template/header.html
+++ b/client/markup/template/header.html
@@ -2,7 +2,7 @@
   <a href="index.html" class="index-link">
     <h1>Derivaciones.GitHub.io</h1>
   </a>
-  <a href="https://github.com/derivaciones" class="github-link">
+  <a href="https://github.com/derivaciones" target="_blank" class="github-link">
     <div class="github-left">
       <img src="asset/github-icon.png" class="github-logo">
     </div>
