--- a/client/style/page/help.scss
+++ b/client/style/page/help.scss
@@ -1,19 +1,3 @@
-header{
-  float: left;
-  width: 100%;
-  height: 110px;
-  overflow: hidden;
-  box-sizing: border-box;
-}
-
-main{
-  float: left;
-  width: 100%;
-  height: 100vh;
-  position: absolute;
-  box-sizing: border-box;
-  padding-top: 110px + 4px;
-  padding-bottom: 4px;
-  padding-left: 4px;
-  padding-right: 4px;
-}
+@import '../variables';
+@import '../mixins';
+@import '../layout/text';
