--- a/client/markup/template/help.html
+++ b/client/markup/template/help.html
@@ -369,7 +369,7 @@
         funcionamiento del sistema como casos testigos y son la evidencia de
         ese correcto funcionamiento.
       </p>
-      <div id="examples"></div>
+      <div id="examples" class="examples"></div>
 
       <h4 id="proyectos-a-futuro">
         <i class="fa fa-caret-right"></i>
