--- a/client/markup/template/sidebar.html
+++ b/client/markup/template/sidebar.html
@@ -7,7 +7,7 @@
       <a class="help-link" href="help.html">ayuda</a>
     </li>
     <li>
-      <a class="examples-link" href="examples.html">ejemplos</a>
+      <a class="examples-link" href="validate.html">ejemplos</a>
     </li>
   </ul>
 </div>
