--- a/client/markup/template/output.html
+++ b/client/markup/template/output.html
@@ -1,4 +1,8 @@
 <div class="output-container">
-  <div id="output" onclick="outputMode()"></div>
+  <div id="output" onclick="outputMode()">
+    <span class="placehoder">
+      ingrese una derivación y <br/> haga click en el botón
+      <span class="procesar"><i class="fa fa-check"></i></span>
+    </span>
+  </div>
 </div>
-    
