--- a/client/markup/template/menu.html
+++ b/client/markup/template/menu.html
@@ -3,16 +3,19 @@
     <button type="button" id="process" class="menu-button-icon" title="process">
       <span class="fa fa-check"></span>
     </button>
-    <!--(bake ../template/button.html symbol="&and;"  write="Λ" key="f")-->
-    <!--(bake ../template/button.html symbol="&or;"   write="V" key="d")-->
-    <!--(bake ../template/button-icon.html klass="arrow-right" write="→" key="e")-->
-    <!--(bake ../template/button.html symbol="&perp;" write="⊥" key="r")-->
-    <!--(bake ../template/button.html symbol="&not;"  write="¬" key="g")-->
-    <!--(bake ../template/button-text.html symbol="&lt;&lt;" write="<<")-->
-    <!--(bake ../template/button-text.html symbol="p" write="p")-->
-    <!--(bake ../template/button-text.html symbol="q" write="q")-->
-    <button type="button" id="more" class="menu-button-icon" title="process" onclick="more()">
+    <!--(bake ../template/button.html      symbol="&and;"      write="Λ" key="q" klass="m-char")-->
+    <!--(bake ../template/button.html      symbol="&or;"       write="V" key="d" klass="m-char")-->
+    <!--(bake ../template/button.html      symbol="&forall;"   write="∀" key="h" klass="big-char")-->
+    <!--(bake ../template/button.html      symbol="&exist;"    write="∃" key="y" klass="big-char")-->
+    <!--(bake ../template/button-icon.html                     write="→" key="o" faKlass="arrow-right")-->
+    <!--(bake ../template/button.html      symbol="&perp;"     write="⊥" key="j" klass="m-char")-->
+    <!--(bake ../template/button.html      symbol="&not;"      write="¬" key="g")-->
+    <!--(bake ../template/button-text.html symbol="&lt;&lt;"   write="<<")-->
+    <!--(bake ../template/button-text.html symbol="p"          write="p")-->
+    <!--(bake ../template/button-text.html symbol="q"          write="q")-->
+
+    <!--button type="button" id="more" class="menu-button-icon" title="process" onclick="more()">
       <span class="fa fa-plus"></span>
-    </button>
+    </button-->
   </div>
 </div>
