--- a/client/style/template/_output.scss
+++ b/client/style/template/_output.scss
@@ -8,6 +8,7 @@
     box-sizing: border-box;
     padding-right: 0px;
     height: 100%;
+    overflow: auto;
     .placehoder{
       line-height: 2rem;
       color: #AAF;
