--- a/client/markup/template/button-icon.html
+++ b/client/markup/template/button-icon.html
@@ -1,3 +1,3 @@
 <button type="button" class="menu-button-icon" title="ctrl+{{key}}" onclick="writeInput('{{write}}')">
-  <span class="fa fa-{{klass}}"></span>
+  <span class="fa fa-{{faKlass}}"></span>
 </button>
