--- a/client/style/template/_sidebar.scss
+++ b/client/style/template/_sidebar.scss
@@ -1,5 +1,7 @@
-$sidebar-hover: #008fCD;
-$sidebar-active: #008fCD;
+$sidebar-hover: #e20003;
+$sidebar-active: #e20003;
+$sidebar-background: #FF0000;
+$sidebar-active-text-bg: #ffAf80;
 
 .sidebar{
   width: 100%;
@@ -28,7 +30,7 @@ $sidebar-active: #008fCD;
     width: 100%;
     display: block;
     padding: 5px;
-    background-color: #00bfff;
+    background-color: $sidebar-background;
     color: #FFF;
     font-weight: 600;
     font-family: monospace;
@@ -110,5 +112,5 @@ $sidebar-active: #008fCD;
 .index-page .index-link,
 .examples-page .examples-link{
   background-color: $sidebar-active;
-  color: #00Dfff;
+  color: $sidebar-active-text-bg;
 }
